# ros2_quadruped_liosam

LIO-SAM/config/: params.yaml
LIO-SAM/include/lio_sam/: utility.hpp
quadruped_description/: CMakeLists.txt  package.xml
quadruped_description/launch/: a1_description.launch.py  a1_lidar_description.launch.py  a1_rs_description.launch.py  aliengo_description.launch.py  anymal_b_description.launch.py  anymal_c_description.launch.py  aselsan_description.launch.py  b1_description.launch.py  champ_description.launch.py  cheetah_description.launch.py  description.launch.py  lion_description.launch.py  velodyne_description.launch.py
quadruped_description/meshes/lion/: foot_Link.STL  hip_Link.STL  shank_Link.STL  thigh_Link.STL
quadruped_description/rviz/: aselsan.rviz  lidar.rviz
quadruped_description/urdf/a1/: a1.urdf  a1_rs.xacro  a1_with_lidar.urdf.xacro
quadruped_description/urdf/sensors/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  VLP-32C.urdf.xacro  _d435.gazebo.xacro  _d435.urdf.xacro  d435i.urdf.xacro  test_d435_camera.urdf.xacro  vlp-32c-example.urdf.xacro
quadruped_gazebo/: CMakeLists.txt  package.xml
quadruped_gazebo/config/: champ_ros1_control.yaml  champ_ros_control.yaml  go1_ros_control.yaml
quadruped_gazebo/launch/: a1_gazebo.launch.py  a1_lidar_gazebo.launch.py  a1_rs_gazebo.launch.py  aselsan_gazebo.launch.py  cheetah_gazebo.launch.py  comar.launch.py  dummy.launch.py  go1_gazebo.launch.py  realsense.launch.py  velodyne_description.launch.py  velodyne_gazebo.launch.py
quadruped_gazebo/scripts/: imu_sensor.py  odometry.py  odometry_tf.py
